# ult-edu

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
base/: settings.py  urls.py
shop/: admin.py  models.py  serializers.py  urls.py  views.py
shop/management/commands/: initialize_db.py
shop/migrations/: 0001_initial.py
